2008-08-30 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dictd_file.rb: Make get_word_list return the
    (word, offset, len) triplet rather than just the word.
    * test/test_dictd_file.rb: Updated.

2008-08-30 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dictd_file.rb: Added DictdFile#get_word_list.
    * test/test_dictd_file.rb: Unit test.

2008-08-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb (load_last_searches): Fixed problem.

2008-08-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb (initialize): Define the mutex object before
    a search can be triggered.

2008-08-27 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb (selected_dictionary): Fixed bug.
    * lib/fantasdic/sources/virtual_dictionary.rb: Handles the case when a
    virtual dictionary uses a dictionary that was deleted in the meantime.

2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/binary_search.rb: Fixed a bug.

    * lib/fantasdic/utils.rb: Added Enumerable#sum.
    * test/test_utils.rb: Added unit test for it.

    * lib/fantasdic/sources/virtual_dictionary.rb: Added Virtual Dictionary
    source. This is a source where databases are dictionaries defined in the
    settings. This is a convient solution to to group dictionaries together.
    * test/test_virtual_dictionary.rb: Added unit test for it.

2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/file_source.rb: Renamed @hash to @config.
    * lib/fantasdic/sources/virtual_dictionary.rb: Likewise.
    * lib/fantasdic/sources/dictd_file.rb: Likewise.
    * lib/fantasdic/sources/edict_file.rb: Likewise.
    * lib/fantasdic/sources/dict_server.rb: Likewise.
    * lib/fantasdic/source_base.rb: Likewise.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Likewise.

2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>
