@@ -15,14 +15,11 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-test_dir = File.expand_path(File.dirname(__FILE__))
-top_dir = File.expand_path(File.join(test_dir, ".."))
-lib_dir = File.expand_path(File.join(top_dir, "lib"))
-$test_data_dir = File.expand_path(File.join(test_dir, "data"))
-$index_file = File.join($test_data_dir, "freedict-wel-eng.index")
-$dict_file = File.join($test_data_dir, "freedict-wel-eng.dict")
-$dict_dz_file = File.join($test_data_dir, "freedict-wel-eng.dict.dz")
-$LOAD_PATH.unshift(lib_dir)
+$test_dir = File.expand_path(File.dirname(__FILE__))
+$top_dir = File.expand_path(File.join($test_dir, ".."))
+$lib_dir = File.expand_path(File.join($top_dir, "lib"))
+$test_data_dir = File.expand_path(File.join($test_dir, "data"))
+$LOAD_PATH.unshift($lib_dir)
 
 require "test/unit"
 require "fantasdic"
@@ -31,8 +28,14 @@ require "fantasdic/sources/dictd_file"
 class TestDictdFileSource < Test::Unit::TestCase
     include Fantasdic::Source
 
+    def setup
+        @index_file = File.join($test_data_dir, "freedict-wel-eng.index")
+        @dict_file = File.join($test_data_dir, "freedict-wel-eng.dict")
+        @dict_dz_file = File.join($test_data_dir, "freedict-wel-eng.dict.dz")
+    end
+
     def test_binary_search
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             res = index.binary_search("notfound") do |s1, s2|
                 s1 <=> s2
             end
@@ -46,7 +49,7 @@ class TestDictdFileSource < Test::Unit::TestCase
     end
 
     def test_seek_prev_offset
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             assert_equal(index.get_prev_offset(52), 25)
             assert_equal(index.get_prev_offset(2005), 1994)
             assert_equal(index.get_prev_offset(25), nil)
@@ -54,7 +57,7 @@ class TestDictdFileSource < Test::Unit::TestCase
     end
 
     def test_seek_next_offset
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             assert_equal(index.get_next_offset(52), 72)
             assert_equal(index.get_next_offset(9462), 9472)
             assert_equal(index.get_next_offset(9472), nil)
@@ -62,7 +65,7 @@ class TestDictdFileSource < Test::Unit::TestCase
     end
 
     def test_match_prefix
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             assert_equal(index.match_prefix("ca").map { |a| a.first },
 ["cadair", "cadnawes", "cadno", "cadw", "cael", "caerdydd", "caeredin",
  "caerefrog", "caerludd", "caint", "caled", "calon", "canol", "cant",
@@ -76,7 +79,7 @@ class TestDictdFileSource < Test::Unit::TestCase
     end
 
     def test_match_exact
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             assert_equal(index.match_exact("ca").map { |a| a.first },
                          [])
 
@@ -86,7 +89,7 @@ class TestDictdFileSource < Test::Unit::TestCase
     end
 
     def test_match_suffix
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             assert_equal(index.match_suffix("din").map { |a| a.first },
                          ["caeredin", "lladin"])
 
@@ -96,7 +99,7 @@ class TestDictdFileSource < Test::Unit::TestCase
     end
 
     def test_match_substring
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             assert_equal(index.match_substring("hufein").map { |a| a.first },
                          ["rhufeinaidd", "rhufeiniad", "rhufeinig",
                           "rhufeiniwr"])
@@ -107,7 +110,7 @@ class TestDictdFileSource < Test::Unit::TestCase
     end
 
     def test_match_word
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             assert_equal(index.match_word("os").map { |a| a.first },
                          ["os", "os gwelwch yn dda"])
 
@@ -117,7 +120,7 @@ class TestDictdFileSource < Test::Unit::TestCase
     end
 
     def test_get_word_list
-        DictdIndex.open($index_file) do |index|
+        DictdIndex.open(@index_file) do |index|
             assert_equal(index.get_word_list[0..24].map { |a| a.first },
                         ["00databasealphabet",
                         "00databasedictfmt11010",
