@@ -15,14 +15,11 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-test_dir = File.expand_path(File.dirname(__FILE__))
-top_dir = File.expand_path(File.join(test_dir, ".."))
-lib_dir = File.expand_path(File.join(top_dir, "lib"))
-$config_file = File.expand_path(File.join(test_dir, "data", "config.yaml"))
-$test_data_dir = File.expand_path(File.join(test_dir, "data"))
-$edict_file = File.join($test_data_dir, "edict.utf8")
-$dict_index_file = File.join($test_data_dir, "freedict-wel-eng.index")
-$LOAD_PATH.unshift(lib_dir)
+$test_dir = File.expand_path(File.dirname(__FILE__))
+$top_dir = File.expand_path(File.join($test_dir, ".."))
+$lib_dir = File.expand_path(File.join($top_dir, "lib"))
+$test_data_dir = File.expand_path(File.join($test_dir, "data"))
+$LOAD_PATH.unshift($lib_dir)
 
 require "test/unit"
 require "fantasdic"
@@ -33,11 +30,17 @@ require "fantasdic/sources/edict_file"
 class TestVirtualDictionarySource < Test::Unit::TestCase
 
     def setup
-        prefs = Fantasdic::PreferencesBase.new($config_file)
+        @config_file = File.expand_path(File.join($test_data_dir,
+                                                  "config.yaml"))
+        @edict_file = File.join($test_data_dir, "edict.utf8")
+        @dict_index_file = File.join($test_data_dir, "freedict-wel-eng.index")
+
+
+        prefs = Fantasdic::PreferencesBase.new(@config_file)
         prefs.dictionaries = ["edict", "dictdfile"]
         prefs.dictionaries_infos["edict"] = {
             :source => "EdictFile",
-            :filename => $edict_file,
+            :filename => @edict_file,
             :all_dbs => true,
             :sel_dbs => [],
             :encoding => "UTF-8"}
@@ -45,7 +48,7 @@ class TestVirtualDictionarySource < Test::Unit::TestCase
             :source => "DictdFile",
             :all_dbs => true,
             :sel_dbs => [],
-            :filename => $dict_index_file}
+            :filename => @dict_index_file}
 
         @source = Fantasdic::Source::VirtualDictionaryBase.new(prefs)
     end
